--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -406,16 +406,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.highpeak.gov.uk" class="govuk-link">High Peak Borough Council</a></li>
-      <li><a href="http://www.bromley.gov.uk" class="govuk-link">London Borough of Bromley Council</a></li>
-      <li><a href="https://www.ethnicity-facts-figures.service.gov.uk/crime-justice-and-the-law/policing/stop-and-search/latest" class="govuk-link">Stop and search | Ethnicity facts and figures</a></li>
-      <li><a href="http://www.chorley.gov.uk" class="govuk-link">Chorley Borough Council</a></li>
-      <li><a href="http://www.lancashire.gov.uk/" class="govuk-link">Lancashire County Council</a></li>
-      <li><a href="http://www.rbkc.gov.uk/" class="govuk-link">Royal Borough of Kensington and Chelsea Council</a></li>
-      <li><a href="https://www.malvernhills.gov.uk/" class="govuk-link">Malvern Hills District Council</a></li>
-      <li><a href="http://www.nottinghamshire.gov.uk" class="govuk-link">Nottinghamshire County Council</a></li>
-      <li><a href="https://nationalcareersservice.direct.gov.uk/advice/getajob/cvs/" class="govuk-link">Write your CV - National Careers Service</a></li>
+      <li><a href="http://www.antrim.gov.uk/" class="govuk-link">Antrim Borough Council</a></li>
+      <li><a href="http://www.dorsetforyou.com/weymouthandportland" class="govuk-link">Weymouth and Portland Borough Council</a></li>
+      <li><a href="https://www.nhs.uk/conditions/social-care-and-support-guide/care-services-equipment-and-care-homes/care-homes/" class="govuk-link">Care homes - NHS</a></li>
+      <li><a href="http://www.north-ayrshire.gov.uk" class="govuk-link">North Ayrshire Council</a></li>
+      <li><a href="http://www.richmond.gov.uk/" class="govuk-link">London Borough of Richmond upon Thames Council</a></li>
+      <li><a href="http://www.darlington.gov.uk" class="govuk-link">Darlington Borough Council</a></li>
       <li><a href="http://www.downdc.gov.uk" class="govuk-link">Down District Council</a></li>
+      <li><a href="http://www.chiltern.gov.uk" class="govuk-link">Chiltern District Council</a></li>
+      <li><a href="http://www.richmondshire.gov.uk" class="govuk-link">Richmondshire District Council</a></li>
+      <li><a href="https://www.nidirect.gov.uk/campaigns/coronavirus-covid-19" class="govuk-link">Coronavirus (COVID-19) in Northern Ireland - nidirect</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
