--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/the-human-rights-and-democracy-fund-bid-round-2014-2015--2">The Human Rights and Democracy Fund - Bid Round 2014-2015</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/220268.lt">Pasaulinis susitikimas: seksualinio smurto stabdymas konfliktuose</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-applicant-arrested-for-fraud--2">UK Visa Applicant Arrested for Fraud</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-mumbai--5">Advice for British nationals in Mumbai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/hms-protector-marks-centenary-of-the-rescue-of-the-crew-of-endurance">HMS PROTECTOR marks centenary of the rescue of the crew of ENDURANCE</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-update--6">Turks and Caicos post Cabinet Update</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/death-of-nelson-mandela">Death of Nelson Mandela</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/national-strategy-for-maritime-security">National Strategy for Maritime Security</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/259217.pt">Britânicos visitam RS em busca de empreendedores e investidores</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/the-5th-uk-china-architecture-forum-held-in-guangzhou-on-4-july--2">The 5th UK-China Architecture Forum held in Guangzhou on 4 July</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/252606.zh-tw">Chevening 英國政府獎學金開放申請</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/284716.pt">Missão brasileira da área de subsea visita o Reino Unido</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/foreign-secretary-statement-on-the-death-of-nelson-mandela">Foreign Secretary statement on the death of Nelson Mandela</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/294701.pt">SEMINÁRIO</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/286266.es">Día de San David 2015</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/fintech-week-2016-report-finds-britain-to-be-the-worlds-leading-fintech-centre">Fintech Week 2016: report finds Britain to be the world&rsquo;s leading FinTech centre</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/telephone-lines-out-of-order-at-the-british-embassy-in-havana">Telephone connection restored at the British Embassy in Havana</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-minister-impressed-with-sa-leg-of-bloodhound-education-project--2">British Minister impressed with SA leg of Bloodhound education project</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
