--- a/manual/alerts/publisher-unprocessed-fact-check-emails.html
+++ b/manual/alerts/publisher-unprocessed-fact-check-emails.html
@@ -165,6 +165,13 @@
     </div>
 
      <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        This document has not been updated for a while now. It may be out of date.
+      </strong>
+    </div>
 
   Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/419482f0afc1fd9e3e8bdf572244215f8f8bf0c0">6 Nov 2020</a>
 </div>
