--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -406,16 +406,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
+      <li><a href="http://www.highpeak.gov.uk" class="govuk-link">High Peak Borough Council</a></li>
       <li><a href="http://www.bromley.gov.uk" class="govuk-link">London Borough of Bromley Council</a></li>
+      <li><a href="http://www.north-herts.gov.uk" class="govuk-link">North Hertfordshire District Council</a></li>
+      <li><a href="http://www.chorley.gov.uk" class="govuk-link">Chorley Borough Council</a></li>
       <li><a href="https://www.malvernhills.gov.uk/" class="govuk-link">Malvern Hills District Council</a></li>
-      <li><a href="http://www.dover.gov.uk" class="govuk-link">Dover District Council</a></li>
-      <li><a href="http://www.renfrewshire.gov.uk" class="govuk-link">Renfrewshire Council</a></li>
-      <li><a href="http://www.north-ayrshire.gov.uk" class="govuk-link">North Ayrshire Council</a></li>
-      <li><a href="http://www.broadland.gov.uk" class="govuk-link">Broadland District Council</a></li>
-      <li><a href="http://www.richmond.gov.uk/" class="govuk-link">London Borough of Richmond upon Thames Council</a></li>
-      <li><a href="http://www.bristol.gov.uk" class="govuk-link">Bristol City Council</a></li>
-      <li><a href="http://www.hambleton.gov.uk/" class="govuk-link">Hambleton District Council</a></li>
-      <li><a href="http://www.copelandbc.gov.uk/" class="govuk-link">Copeland Borough Council</a></li>
+      <li><a href="http://www.nottinghamshire.gov.uk" class="govuk-link">Nottinghamshire County Council</a></li>
+      <li><a href="http://www.lancashire.gov.uk/" class="govuk-link">Lancashire County Council</a></li>
+      <li><a href="http://www.staffsmoorlands.gov.uk" class="govuk-link">Staffordshire Moorlands District Council</a></li>
+      <li><a href="http://www.west-norfolk.gov.uk" class="govuk-link">King&rsquo;s Lynn and West Norfolk Borough Council</a></li>
+      <li><a href="http://www.banbridge.com/" class="govuk-link">Banbridge District Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
